# adopting-bitcoin-dlcdevkit-workshop

./: justfile  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: functions.rs  lib.rs  main.rs
src/components/: AppSidebar.tsx  Countdown.tsx  Header.tsx  Layout.tsx  Modal.tsx  step-navigation.tsx
src/hooks/: use-dlcdevkit.tsx
src/lib/: functions.ts
src/routes/: About.tsx  Home.tsx
src/routes/users/: UserDetail.tsx  Users.tsx
src/routes/walkthrough/: AcceptOffer.tsx  Broadcast.tsx  CloseContract.tsx  CreateOffer.tsx  FundWallet.tsx  OracleAnnouncement.tsx  SendBitcoinBack.tsx  SignContract.tsx  Welcome.tsx
